Update exomiser-data-genome to better externalise sv data properties